--- a/css/style.css
+++ b/css/style.css
@@ -28,5 +28,17 @@
     align-items: center;
     width: 100%;
     height: 100%;
-    background-color: rgba(116, 181, 170, 0.801);
+    background-color: rgba(152, 238, 255, 0.801);
+}
+
+#main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    height: 75%;
+    background-color: rgb(248, 244, 237);
+
 }
