--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,9 @@
     align-content: center;
     align-items: center;
     width: 100%;
-    height: 75%;
-    background-color: rgb(248, 244, 237);
-
+    height: 90%;
+    background-image: url("../image/bghome.png");
+    background-attachment: fixed;
+    background-size: cover;
+    overflow: scroll;
 }
