--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
     background-color: rgba(152, 238, 255, 0.801);
 }
 
-#main {
+#MAIN {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -43,4 +43,51 @@
     background-attachment: fixed;
     background-size: cover;
     overflow: scroll;
+}
+
+
+#FINDDOCTOR {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-image: url("../image/icon.jpg");
+    background-attachment: fixed;
+    background-size: contain;
+    overflow: scroll;
+}
+
+#FINDDOCTOR .btnDoc {
+    display: flex; 
+    text-align: center;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+
+#DOCTORS {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    width: 100%;
+    height: 90%;
+    /* background-image: url("../image/bghome.png");
+    background-attachment: fixed;
+    background-size: cover; */
+    overflow: scroll;
+}
+
+#doctors {
+    padding: 5px;
+    margin: 5px;
+    display : flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    font-size: 10px;
 }
