--- a/css/style.css
+++ b/css/style.css
@@ -68,26 +68,27 @@
 }
 
 
-#DOCTORS {
+.DOCTOR {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: center;
     align-items: center;
     width: 100%;
-    height: 90%;
+    height: 100%;
     /* background-image: url("../image/bghome.png");
     background-attachment: fixed;
     background-size: cover; */
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 #doctors {
-    padding: 5px;
-    margin: 5px;
+    padding: 30px;
+    width: 100%;
+    height: 70%;
     display : flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     font-size: 10px;
 }
